# anthrotace

./: .gitignore  README.md  pyproject.toml  setup.py
anthrotrace/: LICENSE  requirements.txt
anthrotrace/cli/: metrics_report.py
anthrotrace/config/: prometheus.yml
anthrotrace/core/: anthropic_benchmark_sqlite_runner.py  benchmark_summary_service.py  clickhouse_prompt_log_repository.py  cost_calculator.py  mock_repository.py  repository_adapter.py  sqlite_init.py  sqlite_repository.py  yaml_prompt_loader.py
anthrotrace/data/: anthrotrace_common_prompts.yaml
anthrotrace/docs/: README.md
anthrotrace/examples/: benchmark_clickhouse_streamlit.py  benchmark_sqllite_streamlit.py
anthrotrace/metrics/: __init__.py  prometheus_metrics_exporter.py
anthrotrace/streamlit/: streamlit_app.py
anthrotrace/tests/: test_benchmark_summary_service.py  test_clickhouse_prompt_log_repository.py  test_cost_calculator.py  test_mock_repository.py  test_repository_adapter.py  test_sqlite_init.py  test_sqlite_repository.py  test_yaml_prompt_loader.py
